--- a/LibraryManagementSystem-master/LibraryManagementSystem/LibraryManagementSystem.csproj
+++ b/LibraryManagementSystem-master/LibraryManagementSystem/LibraryManagementSystem.csproj
@@ -144,6 +144,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>LibraryDBDataSet17.xsd</DependentUpon>
     </Compile>
+    <Compile Include="LibraryDBDataSet181.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LibraryDBDataSet181.xsd</DependentUpon>
+    </Compile>
     <Compile Include="LibraryDBDataSet2.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -357,6 +362,17 @@
     </None>
     <None Include="LibraryDBDataSet17.xss">
       <DependentUpon>LibraryDBDataSet17.xsd</DependentUpon>
+    </None>
+    <None Include="LibraryDBDataSet181.xsc">
+      <DependentUpon>LibraryDBDataSet181.xsd</DependentUpon>
+    </None>
+    <None Include="LibraryDBDataSet181.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>LibraryDBDataSet181.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="LibraryDBDataSet181.xss">
+      <DependentUpon>LibraryDBDataSet181.xsd</DependentUpon>
     </None>
     <None Include="LibraryDBDataSet2.xsc">
       <DependentUpon>LibraryDBDataSet2.xsd</DependentUpon>
