--- a/LibraryManagementSystem-master/LibraryManagementSystem/LibraryManagementSystem.csproj
+++ b/LibraryManagementSystem-master/LibraryManagementSystem/LibraryManagementSystem.csproj
@@ -37,6 +37,19 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClosedXML, Version=0.95.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ClosedXML.0.95.3\lib\net40\ClosedXML.dll</HintPath>
+    </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.7.2.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.7.2\lib\net40\DocumentFormat.OpenXml.dll</HintPath>
+    </Reference>
+    <Reference Include="ExcelNumberFormat, Version=1.0.10.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExcelNumberFormat.1.0.10\lib\net20\ExcelNumberFormat.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -49,6 +62,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="admBookSearch.cs">
@@ -148,6 +162,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>LibraryDBDataSet181.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="LibraryDBDataSet19.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LibraryDBDataSet19.xsd</DependentUpon>
     </Compile>
     <Compile Include="LibraryDBDataSet2.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -374,6 +393,17 @@
     <None Include="LibraryDBDataSet181.xss">
       <DependentUpon>LibraryDBDataSet181.xsd</DependentUpon>
     </None>
+    <None Include="LibraryDBDataSet19.xsc">
+      <DependentUpon>LibraryDBDataSet19.xsd</DependentUpon>
+    </None>
+    <None Include="LibraryDBDataSet19.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>LibraryDBDataSet19.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="LibraryDBDataSet19.xss">
+      <DependentUpon>LibraryDBDataSet19.xsd</DependentUpon>
+    </None>
     <None Include="LibraryDBDataSet2.xsc">
       <DependentUpon>LibraryDBDataSet2.xsd</DependentUpon>
     </None>
@@ -473,6 +503,7 @@
     <None Include="LibraryDBDataSetReturnLend.xss">
       <DependentUpon>LibraryDBDataSetReturnLend.xsd</DependentUpon>
     </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -488,6 +519,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AlarmAnalysis.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
